solved rightside whitespace and made scroll smooth

--- a/style.css
+++ b/style.css
@@ -18,10 +18,27 @@ font-family: 'Yeseva One', cursive;
 --indian-red: #c1666bff;
 --selective-yellow: #ffbc1fff;
  */
-html{
-    scroll-behavior: smooth
+ .fade {
+    height: 300px;
+    width: 300px;
+    background-color: #d15757;
+    color: #fff;
+    padding: 10px;
+}
+ html  {
+
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+    scroll-behavior: smooth;
+    
+
 }
 .body{
+    margin: 0;
+    padding: 0;
     /* background: linear-gradient(to bottom, #3a1c71, #d76d77, #ffaf7b); */
     background-image: linear-gradient(to bottom, #5d4157, #626481, #66889e, #7daaae, #a8caba);
     /* background: linear-gradient(to bottom, #5d4157, #a8caba); */
@@ -84,6 +101,7 @@ span{
 .cert-div{
     padding-top: 50px;
     text-align: center;
+    padding-bottom: 50px;
     /* background-color: #086788; */
 }
 
@@ -95,9 +113,13 @@ span{
 }
 
 .badge{
-    text-align: center;
+    /* text-align: center; */
     margin-top: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 
 .flip-card {
     background-color: transparent;
